# labs3Semm

./: .gitignore  .tokems  main.cpp  table.h
2nd/: CMakeLists.txt  README.md  Task.txt  definitions.cpp  definitions.hpp  main.cpp
2nd/Tests/: Tests.cpp
lab3sem/1/: CMakeLists.txt  definitions.cpp  definitions.hpp  main.cpp
lab3sem/2/: definitions.cpp  definitions.hpp  main.cpp
lab3sem/2/Tests/: Tests.cpp
lab3sem/3/dynamicOp/: CMakeLists.txt  definitions.cpp  definitions.hpp  main.cpp  task.cpp
lab3sem/3/dynamicOp/Tests/: Tests.cpp
lab3sem/3/dynamicOp/cmake_cache/: CMakeCache.txt  Makefile  cmake_install.cmake  dynamicOp  dynamicOpMain
lab3sem/3/dynamicOp/cmake_cache/lib/googletest-master/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lab3sem/3/dynamicOp/cmake_cache/lib/googletest-master/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lab3sem/3/dynamicOp/cmake_cache/lib/googletest-master/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lab3sem/3/staticOp/: CMakeLists.txt  definitions.cpp  definitions.hpp  main.cpp
lab3sem/3/staticOp/Tests/: Tests.cpp
lab3sem/4/: CMakeLists.txt
lab3sem/4/Tests/: Test_Comp.cpp  Test_Comp.h  Test_Env_des.cpp  Test_Env_des.h  Test_Module.cpp  Test_Module.h  Test_power_generator.cpp  Test_power_generator.h  Tests.cpp
lab3sem/4/lib/googletest-master/docs/: gmock_cook_book.md
lab3sem/4/src/: AI.cpp  AI.h  Command_center.cpp  Command_center.h  Component.cpp  Component.h  Coord.cpp  Coord.h  Env_descriptor.cpp  Env_descriptor.h  Managing_module.cpp  Managing_module.h  Mobile_robot.cpp  Mobile_robot.h  Module.cpp  Module.h  Module_sensor.cpp  Module_sensor.h  Observation_center.cpp  Observation_center.h  Power_generator.cpp  Power_generator.h  Robot_commander.cpp  Robot_commander.h  Robot_scout.cpp  Robot_scout.h  Util.cpp  Util.h  main.cpp
